--- a/sample-project/ocean/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/sample-project/ocean/en.lproj/MainStoryboard_iPhone.storyboard
@@ -10,11 +10,11 @@
             <objects>
                 <viewController id="lkW-gh-6XG" customClass="SettingsController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lfO-gc-lfL">
-                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" alpha="0.58591548204421995" contentMode="scaleToFill" image="baby-blue-solid.jpg" id="ppj-ni-PtY">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="367"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="auJ-WE-C3N">
@@ -53,6 +53,7 @@
                         <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     </view>
                     <navigationItem key="navigationItem" id="leG-rE-baS"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="levelControl" destination="auJ-WE-C3N" id="XTi-lW-bi5"/>
                         <outlet property="startButton" destination="tQP-WJ-E6e" id="jMm-3P-xnf"/>
@@ -66,6 +67,7 @@
         <!--Congratulations Controller-->
         <scene sceneID="fny-fJ-ftP">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="o5G-LA-bzv" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="bsd-AV-U5q" customClass="CongratulationsController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="49Z-xl-HL7">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
@@ -111,13 +113,13 @@
                         <outlet property="myScore" destination="KlF-v5-Ny0" id="B3U-D4-g2f"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="o5G-LA-bzv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1579" y="684"/>
         </scene>
         <!--I Phone Map-->
         <scene sceneID="tNe-FV-arq">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fZr-FF-LyT" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="ltA-vL-ybE" customClass="iPhoneMap" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ujC-g0-0Zo">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
@@ -171,7 +173,6 @@
                         <segue destination="bsd-AV-U5q" kind="modal" identifier="congratulationsSegue" id="uaZ-Uo-uFp"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fZr-FF-LyT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1911" y="51"/>
         </scene>
@@ -198,6 +199,7 @@
                 <navigationController id="6n4-N9-rif" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="qVe-b2-Op9"/>
                     <toolbarItems/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="EYo-bg-cb4">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
